syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "/go_proto";

package product;

message Product {
  int64 id = 1;
  string name = 2;
  int64 product_category_id = 3;
  int64 quantity = 4;
  string unit_price = 5;
}

message ReadAllRequest {
  string api = 1;
}

message ReadAllResponse {
  string api = 1;
  repeated Product product = 2;
}

message ReadRequest {
  string api = 1;
  int64 id = 2;
}

message ReadResponse {
  string api = 1;
  Product product = 2;
}

message CreateRequest {
  string api = 1;
  Product product = 2;
}

message CreateResponse {
  string api = 1;
  int64 id = 2;
}

message UpdateRequest {
  string api = 1;
  int64 id = 2;
  string unit_price = 3;
}

message UpdateResponse {
  string api = 1;
}

message DeleteRequest {
  string api = 1;
  int64 id = 2;
}

message DeleteResponse {
  string api = 1;
}

service ProductService {

  rpc ReadAll(ReadAllRequest) returns (ReadAllResponse) {
    option (google.api.http) = {
      get: "/api/v1/products"
    };
  }

  rpc Read(ReadRequest) returns (ReadResponse) {
    option (google.api.http) = {
      get: "/api/v1/products/{id}"
    };
  }

  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/api/v1/products"
      body: "*"
    };
  }

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/api/v1/products/{id}/{unit_price}"
      body: "*"
    };
  }

  rpc Delete(DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/products/{id}"
    };
  }

}